--- a/registrationApp/src/app/tab1/tab1.page.html
+++ b/registrationApp/src/app/tab1/tab1.page.html
@@ -5,11 +5,48 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">QR-Code</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item>
+    <ion-input type="text" placeholder="MY QR Code data" [(ngModel)]="qrData">
+    </ion-input>
+  </ion-item>
+
+
+  <ion-segment [(ngModel)]="elementType">
+    <ion-segment-button value="canvas">
+      <ion-label>Canvas</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="img">
+      <ion-label>Image</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="url">
+      <ion-label>URL</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+
+  <ion-button expand="full" (click)="scanCode()" color="secondary">
+    <ion-icon name="qr-scanner"></ion-icon>
+    Scan Code
+  </ion-button>
+
+  <ion-card *ngIf="qrData" text-center>
+    <ngx-qrcode [qrc-value]="qrData" [qrc-element-type]="elementType" qrc-class="my-code">
+    </ngx-qrcode>
+    <ion-card-content>
+      <ion-button expand="full" (click)="downloadQR()" color="tertiary" *ngIf="elementType==='canvas'">
+        <ion-icon name="download" slot="start"></ion-icon>
+        Download QR code
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="scannedCode">
+    <ion-card-content>
+      Result from Scan : {{scannedCode}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
+
