Tab 2 toegevoegd + signature pad

--- a/registrationApp/src/app/tab1/tab1.page.html
+++ b/registrationApp/src/app/tab1/tab1.page.html
@@ -14,4 +14,7 @@
   </ion-header>
 
   <!--Hier moet u inhoud komen denk ik-->
+  <div style="text-align: center;">
+    <button ion-button (click)="bevestigingsKnop()">Bevestig</button>
+  </div>
 </ion-content>
