--- a/registrationApp/src/app/tab2/tab2.page.html
+++ b/registrationApp/src/app/tab2/tab2.page.html
@@ -1,17 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Locatie
-    </ion-title>
+    <ion-button fill="clear" slot="start" (click)="goBack()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </ion-button>
+    <ion-title>Locatie</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Locatie</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <!--Hier moet u inhoud komen denk ik-->
+  <ion-item style="cursor: pointer" (click)="locatePosition()">
+    <ion-button fill="clear">
+      <ion-icon slot="start" name="map"></ion-icon>
+      Locatie verifiëren
+    </ion-button>
+  </ion-item>
+  <div id="mapId" style="height:500px"></div>
+  <ion-item>
+    <ion-icon slot="start" name="locate"></ion-icon>
+    <ion-label position="stacked">Adres</ion-label>
+    <ion-textarea [(ngModel)]="address" type="text" style="margin-top:20px;"></ion-textarea>
+  </ion-item>
+  <ion-button shape="round" expand="block" (click)="bevestigingsKnop()">Bevestig locatie</ion-button>
 </ion-content>
