longitude en latitude

--- a/registrationApp/src/app/tab2/tab2.page.html
+++ b/registrationApp/src/app/tab2/tab2.page.html
@@ -17,7 +17,9 @@
   <div id="mapId" style="height:500px"></div>
   <ion-item>
     <ion-icon slot="start" name="locate"></ion-icon>
-    <ion-label position="stacked">Adres</ion-label>
+    <ion-label position="stacked">Locatie</ion-label>
+    <ion-label position="stacked">Latitude: {{this.lat}}</ion-label>
+    <ion-label position="stacked">Longitude: {{this.lng}}</ion-label>
     <ion-textarea [(ngModel)]="address" type="text" style="margin-top:20px;"></ion-textarea>
   </ion-item>
   <ion-button shape="round" expand="block" (click)="bevestigingsKnop()">Bevestig locatie</ion-button>
