--- a/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
+++ b/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
@@ -6,8 +6,8 @@
 
 <ion-content>
   <section style="margin: 20px;">
-    <p>Snummer</p>
-    <ion-input placeholder="Snummer"></ion-input>
+    <p>Studenten nummer</p>
+    <ion-input placeholder="Bv. s123456"></ion-input>
     <br>
     <div class="signature-pad">
       <div class="signature-pad--body">
