--- a/registrationApp/src/app/tab3/tab3.page.scss
+++ b/registrationApp/src/app/tab3/tab3.page.scss
@@ -1,3 +1,50 @@
-ion-content ion-toolbar {
-  --background: translucent;
+table#example {
+  border-collapse: collapse;
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+#example tr {
+  background-color: #eee;
+  border-top: 1px solid #fff;
+
+}
+#example tr:hover {
+  background-color: #ccc;
+}
+#example th {
+  background-color: #fff;
+}
+#example th, #example td {
+  padding: 3px 5px;
+}
+#example td:hover {
+  cursor: pointer;
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
 }
