--- a/registrationApp/src/app/tabs/tabs.page.html
+++ b/registrationApp/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
       <ion-label>Locatie</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button (click)="validation()">
       <ion-icon name="person"></ion-icon>
       <ion-label>Admin</ion-label>
     </ion-tab-button>
