Tab 2 adresbepaling toegevoegd

--- a/registrationApp/src/app/tab2/tab2.page.html
+++ b/registrationApp/src/app/tab2/tab2.page.html
@@ -11,7 +11,7 @@
   <div id="mapId" style="height:500px"></div>
   <ion-item>
     <ion-icon slot="start" name="locate"></ion-icon>
-    <ion-label position="stacked">Locatie: {{this.address}}</ion-label>
+    <ion-label position="stacked">Locatie: {{this.adres}} </ion-label>
     <ion-label position="stacked">Latitude: {{this.lat}}</ion-label>
     <ion-label position="stacked">Longitude: {{this.lng}}</ion-label>
     <p class="item-text-wrap"></p>
