terug knoppen gefixt

--- a/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
+++ b/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-button fill="clear" slot="start" (click)="terug()">
+      <ion-icon name="arrow-back"></ion-icon>
+    </ion-button>
     <ion-title>Handtekening</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -25,8 +28,6 @@
         </div>
       </div>
     </section>
-    <br>
-    <button class="knop" (click)="terug()">Terug</button>
   </section>
 
 </ion-content>
