--- a/registrationApp/src/app/tab3/tab3.page.scss
+++ b/registrationApp/src/app/tab3/tab3.page.scss
@@ -1,9 +1,9 @@
 table#example {
   border-collapse: collapse;
-  position: fixed;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
+  //position: fixed;
+  //top: 35%;
+  //left: 50%;
+  //transform: translate(-50%, -50%); 
 }
 #example tr {
   background-color: #eee;
