knoppen allemaal in dezelfde stijl

--- a/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
+++ b/registrationApp/src/app/handtekening-pagina/handtekening-pagina.page.html
@@ -22,9 +22,9 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-6">
-          <button class="knop" (click)="clear()">Clear</button>
-          <button class="knop" (click)="undo()">Undo</button>
-          <button class="knop" (click)="save()">Save</button>
+          <ion-button (click)="clear()">Clear</ion-button>
+          <ion-button (click)="undo()">Undo</ion-button>
+          <ion-button (click)="save()">Save</ion-button>
         </div>
       </div>
     </section>
