--- a/registrationApp/src/app/tab1/tab1.page.html
+++ b/registrationApp/src/app/tab1/tab1.page.html
@@ -15,7 +15,7 @@
   </ion-segment>
 
 
-  <ion-button expand="full" (click)="scanCode()" color="secondary">
+  <ion-button expand="full" (click)="scanCode()">
     <ion-icon name="qr-scanner"></ion-icon>
     Camera Openen
   </ion-button>
