--- a/registrationApp/src/app/tab2/tab2.page.html
+++ b/registrationApp/src/app/tab2/tab2.page.html
@@ -15,5 +15,5 @@
     <ion-label position="stacked">Longitude: {{this.lng}}</ion-label>
     <p class="item-text-wrap"></p>
   </ion-item>
-  <ion-button shape="round" expand="block" (click)="bevestigingsKnop()">Bevestig locatie</ion-button>
+  <ion-button expand="block" (click)="bevestigingsKnop()">Bevestig locatie</ion-button>
 </ion-content>
